feat: Sistema multi-agente completo para producción
- Agentes funcionando con API real de Neynar (sin mocks)
- Scheduler automático cada 30 minutos
- Sistema de tiers dinámico (NFT/cUSD/XP según score)
- Análisis de participación del usuario en tendencias
- Integración con Gemini AI (con fallback a análisis básico)
- Rate limiting y manejo de errores mejorado
- Frontend optimizado para Farcaster MiniApp
- Endpoints corregidos según documentación oficial de Neynar
- Manejo de cuotas y errores 429/402
- Sistema listo para producción

--- a/apps/agents/env.sample
+++ b/apps/agents/env.sample
@@ -1,11 +1,45 @@
 GOOGLE_API_KEY="replace-me"
 TAVILY_API_KEY="replace-me"
 CELO_RPC_URL="https://alfajores-forno.celo-testnet.org"
+CELO_PRIVATE_KEY="0xabc123..."
+LOOTBOX_VAULT_ADDRESS="0x4Db514984aAE6A24A05f07c30310050c245b0256"
+REGISTRY_ADDRESS="0x4f7aA310c1f90e435f292f5D9bA07cb102409990"
+MINTER_ADDRESS="0x28A499Be43D2e9720E129725e052781746e59D1D"
 CELO_EXPLORER_API=""
 FARCASTER_HUB_API="https://api.warpcast.com"
 FARCASTER_API_TOKEN=""
+NEYNAR_API_KEY="NEYNAR_API_DOCS"
+# MiniPay Tool API (OPCIONAL): Si no configuras PROJECT_SECRET, el sistema usará LootBoxVault para distribuir cUSD
 MINIPAY_TOOL_URL="https://api.minipay.celo.org"
 MINIPAY_PROJECT_ID="lootbox-agent"
+MINIPAY_PROJECT_SECRET=""  # Opcional: deja vacío para usar contrato LootBoxVault
+MINIPAY_REWARD_AMOUNT="0.15"
+XP_REWARD_AMOUNT="50"
+MAX_RECENT_CASTS="8"
+MIN_TREND_SCORE="0.35"
+MAX_REWARD_RECIPIENTS="5"
+MAX_ONCHAIN_REWARDS="2"
+LEADERBOARD_MAX_ENTRIES="100"
+ALLOW_MANUAL_TARGET="false"
+REWARD_METADATA_URI="ipfs://QmExample"
+DEFAULT_REWARD_TYPE="nft"
 AGENT_WEBHOOK_SECRET="replace-me"
+
+# Scheduler Automático
+AUTO_SCAN_ON_STARTUP="true"
+AUTO_SCAN_INTERVAL_MINUTES="30"
+
+# Sistema de Tiers y Ponderaciones
+# Tiers: Score mínimo para cada tipo de recompensa
+TIER_NFT_THRESHOLD="85.0"      # Score >= 85: NFT
+TIER_CUSD_THRESHOLD="60.0"     # Score >= 60: cUSD
+# Score < 60: XP
+
+# Ponderaciones para calcular user_score (deben sumar ~1.0)
+WEIGHT_TREND_SCORE="0.40"      # 40% del score viene del trend_score
+WEIGHT_FOLLOWER_COUNT="0.20"   # 20% de followers
+WEIGHT_POWER_BADGE="0.15"      # 15% bonus por power badge
+WEIGHT_ENGAGEMENT="0.25"       # 25% de engagement (participación + casts relacionados)
+
 
 
