--- a/apps/agents/pyproject.toml
+++ b/apps/agents/pyproject.toml
@@ -13,7 +13,8 @@ dependencies = [
     "httpx>=0.27.0",
     "python-dotenv>=1.0.1",
     "pydantic-settings>=2.3.0",
-    "web3>=6.20.0"
+    "web3>=6.20.0",
+    "apscheduler>=3.10.4"
 ]
 requires-python = ">=3.10"
 
@@ -26,5 +27,6 @@ lootbox-agents = "src.main:run_cli"
 [build-system]
 requires = ["setuptools>=68.0"]
 build-backend = "setuptools.build_meta"
+
 
 
