--- a/apps/agents/env.sample
+++ b/apps/agents/env.sample
@@ -2,9 +2,12 @@ GOOGLE_API_KEY="replace-me"
 TAVILY_API_KEY="replace-me"
 CELO_RPC_URL="https://alfajores-forno.celo-testnet.org"
 CELO_PRIVATE_KEY="0xabc123..."
-LOOTBOX_VAULT_ADDRESS="0x4Db514984aAE6A24A05f07c30310050c245b0256"
-REGISTRY_ADDRESS="0x4f7aA310c1f90e435f292f5D9bA07cb102409990"
-MINTER_ADDRESS="0x28A499Be43D2e9720E129725e052781746e59D1D"
+# Direcciones desplegadas en Celo Sepolia (PRODUCCIÓN)
+LOOTBOX_VAULT_ADDRESS="0x3808D0C3525C4F85F1f8c9a881E3949327FB9cF7"
+REGISTRY_ADDRESS="0x86C878108798e2Ce39B783127955B8F8A18ae2BE"
+MINTER_ADDRESS="0x0d7370f79f77Ee701C5F40443F8C8969C28b3412"
+# Token addresses (Celo Sepolia)
+CUSD_ADDRESS="0x874069Fa1Eb16D44d622F2e0Ca25eeA172369bC1"  # cUSD en Sepolia
 CELO_EXPLORER_API=""
 FARCASTER_HUB_API="https://api.warpcast.com"
 FARCASTER_API_TOKEN=""
