Fix: Agregar endpoint para scans manuales y Vercel Cron Jobs
- Endpoint /api/lootbox/scan para ejecutar scans manualmente
- Configuración de Vercel Cron Jobs en vercel.json
- Limpiar entradas 'pending' del leaderboard
- Solo registrar usuarios con recompensas exitosas

--- a/apps/agents/vercel.json
+++ b/apps/agents/vercel.json
@@ -1,5 +1,11 @@
 {
   "rewrites": [
     { "source": "/(.*)", "destination": "/api/index" }
+  ],
+  "crons": [
+    {
+      "path": "/api/lootbox/scan",
+      "schedule": "*/30 * * * *"
+    }
   ]
 }
