Add: Integrar logo PremioxyzLogo.svg como favicon y en metadata
- Agregado logo como favicon (icon.svg en app/)
- Actualizada metadata con iconos del logo
- Actualizado manifest.json para usar el logo SVG
- Logo ahora aparece en favicon, OpenGraph y Twitter cards

--- a/apps/web/public/manifest.json
+++ b/apps/web/public/manifest.json
@@ -8,14 +8,20 @@
   "theme_color": "#FCFF52",
   "icons": [
     {
-      "src": "/icon.png",
-      "sizes": "192x192",
-      "type": "image/png"
+      "src": "/PremioxyzLogo.svg",
+      "sizes": "any",
+      "type": "image/svg+xml",
+      "purpose": "any maskable"
     },
     {
-      "src": "/icon.png",
+      "src": "/PremioxyzLogo.svg",
+      "sizes": "192x192",
+      "type": "image/svg+xml"
+    },
+    {
+      "src": "/PremioxyzLogo.svg",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/svg+xml"
     }
   ]
 }
