--- a/apps/agents/nixpacks.toml
+++ b/apps/agents/nixpacks.toml
@@ -2,7 +2,10 @@
 nixPkgs = ["python311", "pip"]
 
 [phases.install]
-cmds = ["pip install -r requirements.txt"]
+cmds = [
+  "pip install --upgrade pip",
+  "pip install -r requirements.txt"
+]
 
 [start]
 cmd = "uvicorn api.index:app --host 0.0.0.0 --port $PORT"
