--- a/apps/agents/railway.toml
+++ b/apps/agents/railway.toml
@@ -4,3 +4,5 @@ builder = "nixpacks"
 [deploy]
 startCommand = "uvicorn api.index:app --host 0.0.0.0 --port $PORT"
 
+[build.env]
+RAILWAY_PYTHON_VERSION = "3.11"
