--- a/apps/agents/railway.toml
+++ b/apps/agents/railway.toml
@@ -1,5 +1,8 @@
 [build]
 builder = "nixpacks"
 
+[build.env]
+NIXPACKS_NO_NODE = "true"
+
 [deploy]
 startCommand = "uvicorn api.index:app --host 0.0.0.0 --port $PORT"
