--- a/apps/agents/nixpacks.toml
+++ b/apps/agents/nixpacks.toml
@@ -11,5 +11,5 @@ cmds = [
 cmd = "uvicorn api.index:app --host 0.0.0.0 --port $PORT"
 
 [variables]
-NIXPACKS_NO_NODE = "true"
+NIXPACKS_NO_NODE = "1"
 
