--- a/apps/agents/railway.toml
+++ b/apps/agents/railway.toml
@@ -2,7 +2,7 @@
 builder = "nixpacks"
 
 [build.env]
-NIXPACKS_NO_NODE = "true"
+NIXPACKS_NO_NODE = "1"
 
 [deploy]
 startCommand = "uvicorn api.index:app --host 0.0.0.0 --port $PORT"
