fix: Agregar NIXPACKS_SKIP_NODE_DETECT para forzar solo Python
- Agregado NIXPACKS_SKIP_NODE_DETECT en nixpacks.toml y railway.toml
- Actualizada guía RAILWAY.md con verificación de Root Directory
- Esto debería evitar que Nixpacks detecte Node.js completamente

--- a/apps/agents/railway.toml
+++ b/apps/agents/railway.toml
@@ -3,6 +3,7 @@ builder = "nixpacks"
 
 [build.env]
 NIXPACKS_NO_NODE = "1"
+NIXPACKS_SKIP_NODE_DETECT = "1"
 
 [deploy]
 startCommand = "uvicorn api.index:app --host 0.0.0.0 --port $PORT"
