--- a/apps/agents/nixpacks.toml
+++ b/apps/agents/nixpacks.toml
@@ -13,4 +13,5 @@ cmd = "uvicorn api.index:app --host 0.0.0.0 --port $PORT"
 [variables]
 NIXPACKS_NO_NODE = "1"
 NIXPACKS_PYTHON_VERSION = "3.11"
+NIXPACKS_SKIP_NODE_DETECT = "1"
 
