fix: Sobrescribir fase Node.js en nixpacks.toml para evitar detección
- Agregado [phases.setup.nodejs] con nixPkgs vacío
- Mejorado .dockerignore para ignorar todos los package.json
- Actualizada guía con solución de Override Build Command
- Esto debería evitar que Nixpacks ejecute comandos de Node.js

--- a/apps/agents/.dockerignore
+++ b/apps/agents/.dockerignore
@@ -6,4 +6,8 @@ node_modules
 ../pnpm-lock.yaml
 ../pnpm-workspace.yaml
 apps/web
+**/package.json
+**/pnpm-lock.yaml
+**/pnpm-workspace.yaml
+**/node_modules
 
