--- a/apps/agents/railway.toml
+++ b/apps/agents/railway.toml
@@ -1,9 +1,6 @@
 [build]
-builder = "nixpacks"
-
-[build.env]
-NIXPACKS_NO_NODE = "1"
-NIXPACKS_SKIP_NODE_DETECT = "1"
+builder = "dockerfile"
+dockerfilePath = "Dockerfile"
 
 [deploy]
 startCommand = "uvicorn api.index:app --host 0.0.0.0 --port $PORT"
