fix: Corregir Dockerfile para usar variable PORT correctamente
- Corregido CMD para usar variable PORT de Railway
- Removidos archivos innecesarios del COPY
- Dockerfile ahora usa solo Python sin detectar Node.js

--- a/apps/agents/Dockerfile
+++ b/apps/agents/Dockerfile
@@ -4,20 +4,17 @@ WORKDIR /app
 
 # Copiar solo archivos necesarios (excluir package.json, etc.)
 COPY requirements.txt .
-COPY runtime.txt .
 COPY api/ ./api/
 COPY src/ ./src/
 COPY pyproject.toml .
-COPY nixpacks.toml .
-COPY railway.toml .
 
 # Instalar dependencias
 RUN pip install --upgrade pip && \
     pip install -r requirements.txt
 
-# Exponer puerto
-EXPOSE $PORT
+# Exponer puerto (Railway usa variable $PORT)
+EXPOSE 8080
 
-# Comando de inicio
-CMD ["uvicorn", "api.index:app", "--host", "0.0.0.0", "--port", "8080"]
+# Comando de inicio (Railway inyecta $PORT como variable de entorno)
+CMD uvicorn api.index:app --host 0.0.0.0 --port ${PORT:-8080}
 
