feat: Agregar modo demo para permitir usuarios sin Farcaster
- Agregado DEMO_MODE en Settings y env.sample
- Modificado EligibilityAgent para permitir usuarios sin Farcaster en modo demo
- Usuarios demo reciben score reducido (30% del normal)
- Solo para fines de demostración

--- a/apps/agents/env.sample
+++ b/apps/agents/env.sample
@@ -28,6 +28,9 @@ REWARD_METADATA_URI="ipfs://QmExample"
 DEFAULT_REWARD_TYPE="nft"
 AGENT_WEBHOOK_SECRET="replace-me"
 
+# Modo Demo (solo para demostración)
+DEMO_MODE="false"  # Si "true", permite usuarios sin Farcaster con score reducido (30% del normal)
+
 # Scheduler Automático
 AUTO_SCAN_ON_STARTUP="true"
 AUTO_SCAN_INTERVAL_MINUTES="30"
