fix: Actualizar configuración de Railway para usar Dockerfile con Railpack
- Actualizado railway.json para usar DOCKERFILE builder
- Mejorado Dockerfile para usar shell form en CMD
- Actualizada documentación RAILWAY.md con instrucciones para Railpack
- Agregado troubleshooting para errores comunes
- Railway ahora usa Railpack por defecto (Nixpacks deprecado)

--- a/apps/agents/Dockerfile
+++ b/apps/agents/Dockerfile
@@ -2,19 +2,21 @@ FROM python:3.11-slim
 
 WORKDIR /app
 
-# Copiar solo archivos necesarios (excluir package.json, etc.)
+# Copiar solo archivos necesarios (excluir package.json, node_modules, etc.)
 COPY requirements.txt .
+COPY runtime.txt .
 COPY api/ ./api/
 COPY src/ ./src/
 COPY pyproject.toml .
 
 # Instalar dependencias
 RUN pip install --upgrade pip && \
-    pip install -r requirements.txt
+    pip install --no-cache-dir -r requirements.txt
 
-# Exponer puerto (Railway usa variable $PORT)
+# Exponer puerto (Railway inyecta $PORT como variable de entorno)
 EXPOSE 8080
 
 # Comando de inicio (Railway inyecta $PORT como variable de entorno)
-CMD uvicorn api.index:app --host 0.0.0.0 --port ${PORT:-8080}
+# Usar shell form para que $PORT se expanda correctamente
+CMD ["sh", "-c", "uvicorn api.index:app --host 0.0.0.0 --port ${PORT:-8080}"]
 
