fix: Corregir error 'Body has already been read' y actualizar URL del backend
- Corregido manejo de respuestas en route.ts para leer body una sola vez
- Actualizada URL del backend a https://celo-build-backend-agents.vercel.app
- Mejorado manejo de errores en leaderboard y trends routes
- Actualizada documentación VERCEL.md con URL correcta
- Actualizado env.sample con URL de producción

--- a/apps/web/env.sample
+++ b/apps/web/env.sample
@@ -1,5 +1,10 @@
+# Para desarrollo local
 NEXT_PUBLIC_AGENT_SERVICE_URL="http://localhost:8001"
 AGENT_SERVICE_URL="http://localhost:8001"
+
+# Para producción (Vercel)
+# NEXT_PUBLIC_AGENT_SERVICE_URL="https://celo-build-backend-agents.vercel.app"
+# AGENT_SERVICE_URL="https://celo-build-backend-agents.vercel.app"
 
 
 
