feat: Actualizar configuración para Celo Mainnet y cUSD
- Actualizada dirección de cUSD por defecto a Mainnet (0x765DE816845861e75A25fCA122bb6898B8B1282a)
- Actualizado env.sample con dirección de Mainnet
- Creada guía rápida DEPLOY_MAINNET.md para deployment en producción
- El sistema ahora está listo para usar cUSD real en Mainnet

--- a/apps/agents/env.sample
+++ b/apps/agents/env.sample
@@ -6,8 +6,10 @@ CELO_PRIVATE_KEY="0xabc123..."
 LOOTBOX_VAULT_ADDRESS="0x3808D0C3525C4F85F1f8c9a881E3949327FB9cF7"
 REGISTRY_ADDRESS="0x86C878108798e2Ce39B783127955B8F8A18ae2BE"
 MINTER_ADDRESS="0x0d7370f79f77Ee701C5F40443F8C8969C28b3412"
-# Token addresses (Celo Sepolia)
-CUSD_ADDRESS="0x874069Fa1Eb16D44d622F2e0Ca25eeA172369bC1"  # cUSD en Sepolia
+# Token addresses
+# Celo Sepolia: 0x874069Fa1Eb16D44d622F2e0Ca25eeA172369bC1
+# Celo Mainnet: 0x765DE816845861e75A25fCA122bb6898B8B1282a
+CUSD_ADDRESS="0x765DE816845861e75A25fCA122bb6898B8B1282a"  # cUSD en Mainnet
 CELO_EXPLORER_API=""
 FARCASTER_HUB_API="https://api.warpcast.com"
 FARCASTER_API_TOKEN=""
