--- a/apps/agents/requirements.txt
+++ b/apps/agents/requirements.txt
@@ -52,9 +52,10 @@ ormsgpack==1.12.0
 packaging==25.0
 parsimonious==0.10.0
 pluggy==1.6.0
-propcache==0.4.1
+prop-cache==0.4.1
 proto-plus==1.26.1
 protobuf==6.33.2
+Pillow==10.2.0
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pycryptodome==3.23.0
