--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,6 +10,7 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@celo/abis": "^14.0.1",
     "@farcaster/miniapp-sdk": "^0.2.1",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
@@ -18,6 +19,7 @@
     "@types/three": "^0.181.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "framer-motion": "^12.23.25",
     "lucide-react": "^0.292.0",
     "next": "^14.0.0",
     "react": "^18.2.0",
@@ -25,8 +27,7 @@
     "tailwind-merge": "^2.0.0",
     "three": "^0.181.2",
     "viem": "^2.0.0",
-    "wagmi": "^2.0.0",
-    "@celo/abis": "^14.0.1"
+    "wagmi": "^2.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.8.0",
