--- a/apps/agents/requirements.txt
+++ b/apps/agents/requirements.txt
@@ -52,7 +52,7 @@ ormsgpack==1.12.0
 packaging==25.0
 parsimonious==0.10.0
 pluggy==1.6.0
-prop-cache==0.4.1
+propcache==0.4.1
 proto-plus==1.26.1
 protobuf==6.33.2
 Pillow==10.2.0
