--- a/apps/agents/requirements.txt
+++ b/apps/agents/requirements.txt
@@ -4,6 +4,7 @@ aiosignal==1.4.0
 annotated-doc==0.0.4
 annotated-types==0.7.0
 anyio==4.12.0
+apscheduler==3.10.4
 attrs==25.4.0
 bitarray==3.8.0
 cachetools==6.2.2
