feat: Agregar soporte para Upstash Redis para persistencia de energía
- Implementado soporte para Upstash Redis como almacenamiento persistente
- Fallback automático a archivo si Redis no está configurado
- Esto resuelve el problema de persistencia en Vercel serverless
- Solo requiere agregar UPSTASH_REDIS_REST_URL y UPSTASH_REDIS_REST_TOKEN en variables de entorno

--- a/apps/agents/env.sample
+++ b/apps/agents/env.sample
@@ -49,5 +49,11 @@ WEIGHT_FOLLOWER_COUNT="0.20"   # 20% de followers
 WEIGHT_POWER_BADGE="0.15"      # 15% bonus por power badge
 WEIGHT_ENGAGEMENT="0.25"       # 25% de engagement (participación + casts relacionados)
 
+# Upstash Redis (para persistencia de energía en serverless)
+# Obtén estas credenciales gratis en: https://console.upstash.com/
+# Crea un nuevo database y copia REST_URL y REST_TOKEN
+UPSTASH_REDIS_REST_URL=""      # Ejemplo: https://xxxxx.upstash.io
+UPSTASH_REDIS_REST_TOKEN=""    # Token de autenticación de Upstash
+
 
 
