fix: Eliminar notificación para usuarios con 1-2 rayos disponibles
- Solo se notifica cuando tiene todos los rayos (3/3) o cuando está recargando (0/3)
- Eliminada notificación intermedia para 1-2 rayos
- Corregido código duplicado en manejo de excepciones
- Agregado guardado automático de mapeo dirección -> FID cuando usuario usa la app

--- a/apps/agents/vercel.json
+++ b/apps/agents/vercel.json
@@ -10,6 +10,10 @@
     {
       "path": "/api/lootbox/scan",
       "schedule": "0 */6 * * *"
+    },
+    {
+      "path": "/api/lootbox/notify-energy",
+      "schedule": "0 12 * * *"
     }
   ]
 }
