feat: Implementar publicación real de casts con Neynar API v2
- Actualizar publish_cast() para usar Neynar API v2 POST /v2/farcaster/cast
- Usar header x-api-key (no api_key) según documentación
- Soporte para signer_uuid compartido del backend (NEYNAR_SIGNER_UUID)
- Mejorar extracción del cast_hash de la respuesta
- Agregar NEYNAR_SIGNER_UUID a env.sample
- Manejo de errores mejorado (402 sin créditos, 400 bad request)
- Integración completa con cast_scheduler para publicación programada

Costo: 150 créditos por cast publicado según Neynar API

--- a/apps/agents/env.sample
+++ b/apps/agents/env.sample
@@ -14,6 +14,10 @@ CELO_EXPLORER_API=""
 FARCASTER_HUB_API="https://api.warpcast.com"
 FARCASTER_API_TOKEN=""
 NEYNAR_API_KEY="NEYNAR_API_DOCS"
+# Signer UUID para publicar casts (debe estar aprobado y creado con la misma API key)
+# Obtén un signer en: https://app.neynar.com/signers
+# NOTA: El signer_uuid debe estar aprobado y creado con la misma NEYNAR_API_KEY
+NEYNAR_SIGNER_UUID=""
 # MiniPay Tool API (OPCIONAL): Si no configuras PROJECT_SECRET, el sistema usará LootBoxVault para distribuir cUSD
 MINIPAY_TOOL_URL="https://api.minipay.celo.org"
 MINIPAY_PROJECT_ID="lootbox-agent"
