--- a/apps/agents/env.sample
+++ b/apps/agents/env.sample
@@ -14,9 +14,19 @@ CELO_EXPLORER_API=""
 FARCASTER_HUB_API="https://api.warpcast.com"
 FARCASTER_API_TOKEN=""
 NEYNAR_API_KEY="NEYNAR_API_DOCS"
-# Signer UUID para publicar casts (debe estar aprobado y creado con la misma API key)
-# Obtén un signer en: https://app.neynar.com/signers
-# NOTA: El signer_uuid debe estar aprobado y creado con la misma NEYNAR_API_KEY
+# FID de la app en Farcaster (OPCIONAL - se obtiene automáticamente desde mnemonic)
+# Si no lo configuras, se buscará automáticamente usando el custody address del mnemonic
+NEYNAR_APP_FID=""
+# Mnemonic de una cuenta Farcaster (requerido para firmar signed keys)
+# IMPORTANTE: Debe ser el mnemonic de una cuenta Farcaster válida
+# Puedes usar tu propia cuenta Farcaster o crear una nueva para la app
+# Cómo obtenerlo:
+# 1. Si tienes una cuenta Farcaster, exporta su mnemonic desde Warpcast
+# 2. O crea una nueva cuenta Farcaster y guarda su mnemonic
+# 3. El FID se obtendrá automáticamente desde el custody address
+NEYNAR_APP_MNEMONIC=""
+# Signer UUID compartido (OPCIONAL - solo para desarrollo/testing)
+# En producción, cada usuario debe tener su propio signer aprobado
 NEYNAR_SIGNER_UUID=""
 # MiniPay Tool API (OPCIONAL): Si no configuras PROJECT_SECRET, el sistema usará LootBoxVault para distribuir cUSD
 MINIPAY_TOOL_URL="https://api.minipay.celo.org"
