feat: Habilitar características de mnemonic y corregir imports para signers
- Agregar Account.enable_unaudited_hdwallet_features() en todos los lugares donde se usa mnemonic
- Agregar import de httpx que faltaba
- Corregir uso de app_fid calculado en lugar de settings.neynar_app_fid
- Agregar scripts de verificación de FID (get_fid_from_mnemonic.py, verify_fid.py, check_fid_info.py)
- Agregar documentación de verificación final (VERIFICACION_FINAL.md)
- Actualizar env.sample con comentarios sobre NEYNAR_APP_FID

--- a/apps/agents/env.sample
+++ b/apps/agents/env.sample
@@ -14,16 +14,25 @@ CELO_EXPLORER_API=""
 FARCASTER_HUB_API="https://api.warpcast.com"
 FARCASTER_API_TOKEN=""
 NEYNAR_API_KEY="NEYNAR_API_DOCS"
+# ============================================================================
+# OPCIÓN 1: SIGNER COMPARTIDO (RECOMENDADO PARA EMPEZAR) ⭐
+# ============================================================================
+# Crea un signer en https://app.neynar.com/signers y aprueba el signer (cuesta ~$2)
+# Luego copia el signer_uuid aquí. TODOS los usuarios usarán este signer.
+# NO necesitas mnemonic ni FID para esta opción.
+NEYNAR_SIGNER_UUID=""
+
+# ============================================================================
+# OPCIÓN 2: SIGNER POR USUARIO (SOLO SI QUIERES BRANDING PERSONALIZADO)
+# ============================================================================
 # FID de la app en Farcaster (OPCIONAL - se obtiene automáticamente desde mnemonic)
-# Si no lo configuras, se buscará automáticamente usando el custody address del mnemonic
 NEYNAR_APP_FID=""
-# Mnemonic de una cuenta Farcaster (requerido para firmar signed keys)
-# IMPORTANTE: Debe ser el mnemonic de una cuenta Farcaster válida
-# Puedes usar tu propia cuenta Farcaster o crear una nueva para la app
+# Mnemonic de una cuenta Farcaster (SOLO necesario si usas signers por usuario)
+# IMPORTANTE: Este es el mnemonic de TU cuenta Farcaster (la de la app), NO del usuario
+# Se usa para firmar mensajes que prueban que tu app es legítima al crear signers
 # Cómo obtenerlo:
-# 1. Si tienes una cuenta Farcaster, exporta su mnemonic desde Warpcast
-# 2. O crea una nueva cuenta Farcaster y guarda su mnemonic
-# 3. El FID se obtendrá automáticamente desde el custody address
+# 1. Si tienes cuenta Farcaster: exporta el mnemonic de la wallet que usaste
+# 2. Si no tienes: crea una nueva cuenta en Warpcast y guarda el mnemonic
 NEYNAR_APP_MNEMONIC=""
 # Signer UUID compartido (OPCIONAL - solo para desarrollo/testing)
 # En producción, cada usuario debe tener su propio signer aprobado
